sample/alg/ios/AlgSample/NativeAlgorithm.h

// AES ================================================================================
extern char* aesEncryptECB128(const char* key, const char* src);
extern char* aesEncryptECB192(const char* key, const char* src);
extern char* aesEncryptECB256(const char* key, const char* src);
extern char* aesEncryptECB128Exp(const char* key, const char* src);
extern char* aesEncryptECB192Exp(const char* key, const char* src);
extern char* aesEncryptECB256Exp(const char* key, const char* src);
extern char* aesEncryptCBC128(const char* init, const char* key, const char* src);
extern char* aesEncryptCBC192(const char* init, const char* key, const char* src);
extern char* aesEncryptCBC256(const char* init, const char* key, const char* src);
extern char* aesEncryptCBC128Exp(const char* init, const char* key, const char* src);
extern char* aesEncryptCBC192Exp(const char* init, const char* key, const char* src);
extern char* aesEncryptCBC256Exp(const char* init, const char* key, const char* src);
extern char* aesDecryptECB128(const char* key, const char* src);
extern char* aesDecryptECB192(const char* key, const char* src);
extern char* aesDecryptECB256(const char* key, const char* src);
extern char* aesDecryptECB128Exp(const char* key, const char* src);
extern char* aesDecryptECB192Exp(const char* key, const char* src);
extern char* aesDecryptECB256Exp(const char* key, const char* src);
extern char* aesDecryptCBC128(const char* init, const char* key, const char* src);
extern char* aesDecryptCBC192(const char* init, const char* key, const char* src);
extern char* aesDecryptCBC256(const char* init, const char* key, const char* src);
extern char* aesDecryptCBC128Exp(const char* init, const char* key, const char* src);
extern char* aesDecryptCBC192Exp(const char* init, const char* key, const char* src);
extern char* aesDecryptCBC256Exp(const char* init, const char* key, const char* src);